// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Screens/Booked Appointment Appointment Not Passed 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg>
            chevron-right.svg
          </svg>
        </button>
        <div
          className="title infoTitle"
        >
          שישי 11/09, 19:06 🛠️
        </div>
      </div>
      <div
        className="stickyComponent"
      >
        <div
          className="name"
        >
          <div>
            משה כהן
          </div>
          <div
            className="icons"
          >
            <svg
              onClick={[Function]}
            >
              copy.svg
            </svg>
            <svg
              onClick={[Function]}
            >
              profile.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="screenContent bookedAppointmentScreenContent"
    >
      <div
        className="status"
      >
        <div>
          סטטוס:
        </div>
        <div
          className="statusChip"
        >
          <div
            className="appointmentStatusChipContainer"
          >
            <div
              className="appointmentStatusChip greenChip"
            >
              הושלם
            </div>
          </div>
        </div>
      </div>
      <div
        className="details"
      >
        פרטי תורם
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            phone.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            מספר טלפון
          </div>
          <div
            className="values"
          >
            <a
              className="phone"
              href="tel: 0521234567"
            >
              0521234567
            </a>
          </div>
        </div>
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            bloodtype.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            סוג דם
          </div>
          <div
            className="values"
          >
            AB+
          </div>
        </div>
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            calender.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            נקבע בתאריך
          </div>
          <div
            className="values"
          >
            08/12/2023
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Screens/Booked Appointment Cant Remove Donor 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg>
            chevron-right.svg
          </svg>
        </button>
        <div
          className="title infoTitle"
        >
          שבת 01/01, 03:01 🛠️
        </div>
      </div>
      <div
        className="stickyComponent"
      >
        <div
          className="name"
        >
          <div>
            משה כהן
          </div>
          <div
            className="icons"
          >
            <svg
              onClick={[Function]}
            >
              copy.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="screenContent bookedAppointmentScreenContent"
    >
      <div
        className="status"
      >
        <div>
          סטטוס:
        </div>
        <div
          className="statusChip"
        >
          <div
            className="appointmentStatusChipContainer"
          >
            <div
              className="appointmentStatusChip greenChip"
            >
              הושלם
            </div>
          </div>
        </div>
        <svg
          className="button"
          onClick={[Function]}
        >
          edit.svg
        </svg>
      </div>
      <div
        className="details"
      >
        פרטי תורם
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            phone.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            מספר טלפון
          </div>
          <div
            className="values"
          >
            <a
              className="phone"
              href="tel: 0521234567"
            >
              0521234567
            </a>
          </div>
        </div>
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            bloodtype.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            סוג דם
          </div>
          <div
            className="values"
          >
            AB+
          </div>
        </div>
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            calender.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            נקבע בתאריך
          </div>
          <div
            className="values"
          >
            08/12/2023
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Screens/Booked Appointment Default 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg>
            chevron-right.svg
          </svg>
        </button>
        <div
          className="title infoTitle"
        >
          שבת 01/01, 03:01 🛠️
        </div>
      </div>
      <div
        className="stickyComponent"
      >
        <div
          className="name"
        >
          <div>
            משה כהן
          </div>
          <div
            className="icons"
          >
            <svg
              onClick={[Function]}
            >
              copy.svg
            </svg>
            <svg
              onClick={[Function]}
            >
              profile.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="screenContent bookedAppointmentScreenContent"
    >
      <div
        className="status"
      >
        <div>
          סטטוס:
        </div>
        <div
          className="statusChip"
        >
          <div
            className="appointmentStatusChipContainer"
          >
            <div
              className="appointmentStatusChip greenChip"
            >
              הושלם
            </div>
          </div>
        </div>
        <svg
          className="button"
          onClick={[Function]}
        >
          edit.svg
        </svg>
      </div>
      <div
        className="details"
      >
        פרטי תורם
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            phone.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            מספר טלפון
          </div>
          <div
            className="values"
          >
            <a
              className="phone"
              href="tel: 0521234567"
            >
              0521234567
            </a>
          </div>
        </div>
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            bloodtype.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            סוג דם
          </div>
          <div
            className="values"
          >
            AB+
          </div>
        </div>
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            calender.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            נקבע בתאריך
          </div>
          <div
            className="values"
          >
            08/12/2023
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
